# pokemon-api

crates/pokemon-api/: Cargo.toml  README.md
crates/pokemon-api/src/: main.rs
crates/upload-pokemon-data/: Cargo.toml  create-tables.sql
crates/upload-pokemon-data/src/: db.rs  main.rs  pokemon_csv.rs
