[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
http = "0.2.5"
lambda_runtime = "0.4.1"
sqlx = { version = "0.5.9", features = ["mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.73", features = ["derive"] }
serde_json = "1.0.73"
tokio = "1.14.0"
once_cell = "1.9.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
